# mol_view_dashboard

./: .gitignore  LICENSE  README.md  analysis_results.csv  config_docking_mgltools.yaml  config_template.yaml  debug_ligand_prep.py  environment.yaml  pyproject.toml  requirements.txt  run_analysis.py  simple_smiles_to_pdbqt.py  smiles_to_pdbqt.py  test_example.py  test_sample_data.py  test_vina_parsing.py
docking/: molecular_docking_mgltools.html
docking_results/: log_0000_Ethanol.txt  log_0001_Isopropanol.txt  log_0002_Benzene.txt  log_0003_Acetic_acid.txt  log_0004_1-Octanol.txt  log_0005_Toluene.txt  log_0006_Triethylamine.txt  log_0007_tert-Butanol.txt  log_0008_Naphthalene.txt  log_0009_Aspirin.txt  log_0010_p-Cymene.txt  log_0011_Palmitic_acid.txt  log_0012_Ibuprofen.txt  log_0013_Antipyrine.txt  log_0014_Salbutamol.txt  log_0015_Caffeine.txt  log_0016_4-tert-Butylphenol.txt  log_0017_Biphenyl.txt  log_0018_Acetaminophen.txt  log_0019_Ethylbenzene.txt  result_0000_Ethanol.pdbqt  result_0001_Isopropanol.pdbqt  result_0002_Benzene.pdbqt  result_0003_Acetic_acid.pdbqt  result_0004_1-Octanol.pdbqt  result_0005_Toluene.pdbqt  result_0006_Triethylamine.pdbqt  result_0007_tert-Butanol.pdbqt  result_0008_Naphthalene.pdbqt  result_0009_Aspirin.pdbqt  result_0010_p-Cymene.pdbqt  result_0011_Palmitic_acid.pdbqt  result_0012_Ibuprofen.pdbqt  result_0013_Antipyrine.pdbqt  result_0014_Salbutamol.pdbqt  result_0015_Caffeine.pdbqt  result_0016_4-tert-Butylphenol.pdbqt  result_0017_Biphenyl.pdbqt  result_0018_Acetaminophen.pdbqt  result_0019_Ethylbenzene.pdbqt
src/: __init__.py  (+5 more)
(+20 files in other folders)
